Fix overflow wrapping issue with table and made it accessible

--- a/app/assets/stylesheets/modals.scss
+++ b/app/assets/stylesheets/modals.scss
@@ -469,6 +469,11 @@ table .form-group {
     }
 }
 
+/* ===== Environment Selection Modal ===== */
+#environmentSelectedForm td {
+    word-break: break-all;
+}
+
 /* ===== Overwrite Modal ===== */
 
 /* ===== Propose Change Request ===== */
